--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines":{
+    "node": "22.17.0"
+  },
   "name": "major-project",
   "version": "1.0.0",
   "description": "Major-Project",
@@ -11,6 +14,7 @@
   "dependencies": {
     "cloudinary": "^2.7.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
